# dorkenum

./: README.md
dorkenum_package_v2_v5/: ETHICS.md  README.md  RELEASE_DRAFT.md  pyproject.toml  requirements.txt
dorkenum_package_v2_v5/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
dorkenum_package_v2_v5/.github/workflows/: ci.yml
dorkenum_package_v2_v5/dorkenum/: api.py  cli.py  core.py  utils.py
dorkenum_package_v2_v5/scripts/: init_repo.sh  publish_with_gh.sh
dorkenum_package_v2_v5/tests/: test_api_session.py  test_core.py  test_integration_mock_api.py  test_integration_pagination.py
