[project]
name = "dorkenum"
version = "0.2.2"
description = "Safe Google-dork query generator and optional API runner — improved with tests, logging, retries, exports, config, and ethics docs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["security","dork","enumeration","osint"]


dependencies = [
	"click>=8.1",
	"requests>=2.31",
	"PyYAML>=6.0",
	"jinja2>=3.1"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

